<resources>
    <string name="app_name"><b><center>Barking Mad Pet Supplies</center></b></string>

    <!-- Strings About Us -->
    <string name="tv_title"><b><H1><center>About Us</center></H1></b></string>
    <string name="tv_about">This brand new one-stop-shop allows you to purchase everything your pampered pet could need, want, or even dream of - all from the comfort of your own phone!
                            Our wide variety of products and our tailored delivery options make us Number 1 in customer satisfaction.
                            We look forward to doing business with you - get your paws, claws, and fins all over our new releases!
    </string>

    <!-- Strings login -->
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="et_name">Name</string>
    <string name="btn_login">Sign In or Register</string>


    <string name="second_page">second page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_logout">Log Out</string>
    <string name="tv_welcome">Welcome to our store!</string>


    <!-- Shop -->
    <string name="tv_shop_banner">Browse our product range!</string>


    <!-- Cart -->
    <string name="btn_proceed_to_checkout">Proceed to checkout</string>
    <string name="your_cart">Your Cart</string>


    <!-- Checkout -->
    <string name="tv_pay_header">Pay Invoice</string>
    <string name="pay_invoice">Pay Invoice</string>
    <string name="payment_amount">Payment amount</string>
    <string name="tv_total_cost">€</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="security_code">Security code</string>
    <string name="cvc">CVC</string>
    <string name="pay_now">Pay now</string>
    <string name="mm_yy">MM/YY</string>
    <string name="postal_code">Postal code</string>
    <string name="expiry_date">Expiry date</string>
    <string name="tv_order_number"> </string>
    <string name="tv_price">Price</string>

    <!-- Strings Nav Bar -->
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="basket">Basket</string>
    <string name="checkout">Checkout</string>
    <string name="your_name">Your name</string>




</resources>